--- a/homestyle.css
+++ b/homestyle.css
@@ -15,17 +15,38 @@ body {
 h1 {
 	font-family: "Arial", sans-serif;
 	color: white;
+	text-align: center;
 	animation: fadein 1s;
 	animation-fill-mode: both;
 }
 
 p {
 	font-family: "Arial", sans-serif;
-	background-color: rgb(100,100,100); 
+	background-color: rgb(100,100,100);
+       	text-align: center;	
 	color: white;
 	animation: fadein 1s;
 	animation-delay: 1s;
 	animation-fill-mode: both;
 }
 
+img {
+	animation: fadein 1s;
+	animation-delay: 2s;
+	animation-fill-mode: both;
+	max-width: 100%;
+	max-height: 100vh;
+	margin: auto;
+}
 
+a:link{
+	color: rgb(112,66,67);
+}
+
+a:visited{
+	color: rgb(167,136,167);
+}
+
+a:hover{}
+
+a:active{}
