--- a/homestyle.css
+++ b/homestyle.css
@@ -13,7 +13,7 @@ ul{
   	margin: 0;
   	padding: 0;
   	width: 20%;
-  	background-color: rgb(66,66,66);
+  	background-color: rgb(90,90,90);
   	height: 87.5%; /* Full height */
  	position: fixed; /* Make it stick, even on scroll */
  	overflow: auto; /* Enable scrolling if the sidenav has too much content */
@@ -66,7 +66,14 @@ h2 {
 	animation-delay: 1s;
 	animation-fill-mode: both;
 }
+
+table { 
+	margin-left: 25%;
+}
+
 .math{
+	overflow-x: scroll;
+	overflow-y: hidden;
 	padding:1%;
 	font-family: monospace;
 	margin-left:25%;
